--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -56,23 +56,23 @@
                     <p:outputLabel value="kurs waluty: "/>
                     <bcf:outputpl value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kurswaluty}"/>
                 </p:panelGrid>
-                <p:panelGrid columns="2" style="margin-top: 10px;">
+                <p:panelGrid columns="2" style="margin-top: 10px;" id="panelkwoty">
                     <p:outputLabel value="ilośc godzin wg kalendarza Polska:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.iloscgodzin}" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2">
-                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek()}" update="RachunekZleceniaForm:lolo RachunekZleceniaForm:lolo1"/>
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek()}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
                     </p:inputNumber>
                      <p:outputLabel value="kwota brutto Polska:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwota}" id="lolo1"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
                     <p:outputLabel value="ilośc godzin wg kalendarza Oddelegowanie:"/>
                     <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.iloscgodzinoddelegowanie}" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2">
-                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek()}" update="RachunekZleceniaForm:lolo RachunekZleceniaForm:lolo1"/>
+                        <p:ajax event="change" partialSubmit="true" listener="#{rachunekZlecenieView.przeliczrachunek()}" update="RachunekZleceniaForm:panelkwoty RachunekZleceniaForm:panelkwoszty"/>
                     </p:inputNumber>
                     <p:outputLabel value="kwota brutto Oddelegowanie:"/>
                      <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwotaoddelegowanie}" id="lolo21"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
                      <p:outputLabel value="Razem wynagrodzenie:"/>
                      <p:inputNumber value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kwotasuma}" id="lolo2321"  decimalPlaces="2" decimalSeparator="," inputStyle="text-align: right"/>
                 </p:panelGrid>
-                <p:panelGrid columns="2" style="margin-top: 10px;">
+                <p:panelGrid columns="2" style="margin-top: 10px;" id="panelkwoszty">
                 <p:outputLabel value="koszt uzyskania procent:"/>
                     <bcf:outputplprocent value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.procentkosztowuzyskaniaDisplay}"/>
                     <p:outputLabel value="koszt uzyskania kwota:"/>
