--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -152,9 +152,9 @@
                         <p:column>
                             <h:outputText value="koszty uzyskania"/>
                         </p:column>
-                         <p:column>
+<!--                         <p:column>
                             <h:outputText value="ulga dla kl.sr"/>
-                        </p:column>
+                        </p:column>-->
                         <p:column>
                             <h:outputText value="podstawa opodatk."/>
                         </p:column>
@@ -189,6 +189,9 @@
                         <p:column>
                             <h:outputText value="do wypł."/>
                         </p:column>
+                        <p:column>
+                            <h:outputText value="w EUR"/>
+                        </p:column>
                         <p:column width="20">
                             <h:outputText value="kurs"/>
                             <bcf:outputkurs value="#{itempasek.kurs}"/>
@@ -207,9 +210,9 @@
                         <p:column>
                             <bcf:outputpl value="#{itempasek.kosztyuzyskania}"/>
                         </p:column>
-                         <p:column>
+<!--                         <p:column>
                             <bcf:outputpl value="#{itempasek.ulgadlaklasysredniejSuma}"/>
-                        </p:column>
+                        </p:column>-->
                         <p:column>
                             <bcf:outputpl value="#{itempasek.podstawaopodatkowania}"/>
                         </p:column>
@@ -243,6 +246,9 @@
                         </p:column>
                         <p:column style="text-align: right;">
                             <bcf:outputpl value="#{itempasek.netto}"  style="color: #009688;"/>
+                        </p:column>
+                        <p:column style="text-align: right;">
+                            <bcf:outputpl value="#{itempasek.nettowaluta}" />
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="@form NieobecnoscListForm DefinicjalistaplacCreateForm2"/>
