--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -17,7 +17,7 @@
               resizable="false"  onShow="ustawdialog('dialograchunekzlecenia','centertile',1650,800);zmienwyglad()" closeOnEscape="true" onHide="resetujdialog('dialograchunekzlecenia');" 
               fitViewport="true">
         <p:ajax event="open" listener="#{rachunekZlecenieView.init()}" update="RachunekZleceniaForm" global="false"/>
-            <h:form id="RachunekZleceniaForm">
+            <h:form  styleClass="formadmin" id="RachunekZleceniaForm">
                 <p:outputPanel rendered="#{wpisView.umowa.umowakodzus.praca}">
                     <h:outputText value="Bieżąca umowa to umowa o pracę. Nie można wygenerować rachunku" style="color: green;"/>
                 </p:outputPanel>
