--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_zbiorcze_wprowadzaniezmiennych.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_zbiorcze_wprowadzaniezmiennych.xhtml
@@ -14,7 +14,7 @@
               fitViewport="true">
         <p:ajax event="open" listener="#{zmienneZbiorczoView.init()}" update="ZbiorczeZmienneForm" global="false"/>
         <p:outputPanel>
-            <h:form id="ZbiorczeZmienneForm">
+            <h:form  styleClass="formadmin" id="ZbiorczeZmienneForm">
 <!--
                             <p:outputLabel value="rodzaj umowy" />
                             <p:selectOneListbox id="rodzajumowy" value="#{pasekwynagrodzenView.rodzajlistyplac}" scrollHeight="120" style="width: 280px;margin-left: 10px;" required="true" 
