--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci_zbiorcze.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci_zbiorcze.xhtml
@@ -14,7 +14,7 @@
             height: 600px  !important;
         }
     </style>
-    <p:dialog id="dialogpracownikanieobecnoscizbiorcze" header="Wprowadzanie nieobecności" widgetVar="dialogpracownikanieobecnoscizbiorcze"  
+    <p:dialog id="dialogpracownikanieobecnoscizbiorcze" header="Wprowadzanie nieobecności. Widać tylko aktywne angaże." widgetVar="dialogpracownikanieobecnoscizbiorcze"  
               resizable="false"  onShow="ustawdialog('dialogpracownikanieobecnoscizbiorcze','centertile',1650,800);" closeOnEscape="true" onHide="resetujdialog('dialogpracownikanieobecnoscizbiorcze');" 
               fitViewport="true">
         <p:ajax event="open" listener="#{nieobecnoscView.initzbiorcze()}" update="NieobecnosczbiorczeCreateForm" global="false"/>
